[package]
name = "cat-chaser"
version = "0.1.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.15"
quicksilver = { version = "0.3", default-features = false, features = ["fonts", "sounds"] }
rand = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
#console_error_panic_hook = "0.1"
stdweb = "0.4.12"

#[patch.'https://github.com/mystal/midgar-engine']
#midgar = { path = "../midgar-engine" }
